Add scroll threshold for app list for mouse wheel events.

This CL fixes an issue with touchpad events being read as mousewheel
events and causing jank on touchpad scroll in the app list. Instead of
figuring out the whole stack and why the wrong event is coming in, just
use the scroll threshold everywhere.

BUG=594264

Review-Url: https://codereview.chromium.org/2029993002
Cr-Commit-Position: refs/heads/master@{#397642}

Former-commit-id: 4db974d7763416334efdbe4859427475ff5889f9